<!--
  ~ /******************************************************************************
  ~   Copyright (C) 2019 Alexander Uchitel.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  ******************************************************************************/
  -->

<resources>
    <string name="app_name">Eventex Test Application</string>
    <string name="text1">1</string>
    <string name="text2">2</string>
    <string name="text3">3</string>
    <string name="text4">4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="parent_fragment">Parent Fragment</string>
    <string name="fragment_receiver">Fragment Receiver</string>
    <string name="send">Send</string>
    <string name="empty">empty</string>
    <string name="child_fragment_text">Child Fragment</string>
    <string name="message_will_appear_here">Message will appear here</string>
    <string name="grandchild_fragment">Grandchild Fragment</string>
    <string name="parent_layout_title">Parent Layout</string>
    <string name="child_layout_title">Child Layout</string>
    <string name="grandchild_layout_title">Grandchild Layout</string>
    <string name="number">number</string>
    <string name="text5">5</string>

    <!-- List for Recycler View-->
    <array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Noname</item>
    </array>
</resources>
