...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/parent_fragment" />

    <EditText
        android:id="@+id/parent_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/empty"
        android:inputType="none"
        android:text="@string/empty" />

    <FrameLayout
        android:id="@+id/frame_child"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>

