...
    style="@style/orientation1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame1"
        style="@style/container1" />

    <LinearLayout
        style="@style/container2"
        android:background="@color/colorTopPanel"
        android:orientation="vertical">
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/text2" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/text3" />
...
